--- a/src/assets/scss/components/_needs.scss
+++ b/src/assets/scss/components/_needs.scss
@@ -48,18 +48,18 @@
       display: none;
     }
 
-    .contrs1,
-    .contrs2,
-    .contrs3,
-    .contrs4,
-    .contrs5,
-    .contrs6,
-    .contrs7,
-    .contrs8,
-    .contrs9,
-    .contrs10,
-    .contrs11,
-    .contrs12 {
+    .needs1,
+    .needs2,
+    .needs3,
+    .needs4,
+    .needs5,
+    .needs6,
+    .needs7,
+    .needs8,
+    .needs9,
+    .needs10,
+    .needs11,
+    .needs12 {
       width: 100%;
       height: 100%;
       overflow-x: auto;
