--- a/src/assets/scss/components/_contributions.scss
+++ b/src/assets/scss/components/_contributions.scss
@@ -14,7 +14,7 @@
     grid-area: contributions;
     border: 1px solid $clr1;
     border-radius: 10px;
-    padding: 8px 4px 8px 8px;
+    padding: 8px 2px 8px 8px;
     max-height: 35vh;
     background: rgba(119, 113, 106, 0.04);
 
@@ -43,22 +43,17 @@
       display: none;
     }
 
-    .contrs1,
-    .contrs2,
-    .contrs3,
-    .contrs4,
-    .contrs5,
-    .contrs6,
-    .contrs7,
-    .contrs8,
-    .contrs9,
-    .contrs10,
-    .contrs11,
-    .contrs12 {
+    .listcards {
       width: 100%;
       height: 100%;
-      overflow-x: auto;
-      padding-right: 4px;
+      padding-right: 2px;
+      overflow-y: auto;
+      .cards_contr {
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        padding-right: 4px;
+      }
     }
   }
 
