--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -13,7 +13,7 @@
 
   border: 1px solid $clr1;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
