--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -21985,7 +21985,7 @@ body .wrapper .content ::-webkit-scrollbar-button {
   grid-area: contributions;
   border: 1px solid #77716A;
   border-radius: 10px;
-  padding: 8px 2px 8px 8px;
+  padding: 8px 2px 4px 8px;
   max-height: 35vh;
   background: rgba(119, 113, 106, 0.04);
   /* total width */
@@ -22368,7 +22368,7 @@ body .wrapper .content ::-webkit-scrollbar-button {
   grid-template-areas: "partner" "title" "cont";
   border: 1px solid #77716A;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 }
 .card_contr .partner {
