--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -60,7 +60,7 @@
 
   border: 1px solid $clrbk_lgnd1_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
@@ -118,7 +118,7 @@
 
   border: 1px solid $clrbk_lgnd2_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
@@ -176,7 +176,7 @@
 
   border: 1px solid $clrbk_lgnd3_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
@@ -234,7 +234,7 @@
 
   border: 1px solid $clrbk_lgnd4_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
@@ -292,7 +292,7 @@
 
   border: 1px solid $clrbk_lgnd5_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
@@ -350,7 +350,7 @@
 
   border: 1px solid $clrbk_lgnd6_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
@@ -408,7 +408,7 @@
 
   border: 1px solid $clrbk_lgnd7_p;
   border-radius: 6px;
-  margin: 4px 0;
+  margin: 0 0 4px;
   background: rgba(119, 113, 106, 0.06);
 
   .partner {
