--- a/src/assets/scss/components/_needs.scss
+++ b/src/assets/scss/components/_needs.scss
@@ -19,7 +19,7 @@
     grid-area: needs;
     border: 1px solid $clr1;
     border-radius: 10px;
-    padding: 8px 4px 8px 8px;
+    padding: 8px 2px 4px 8px;
     max-height: 35vh;
     background: rgba(119, 113, 106, 0.04);
 
@@ -48,102 +48,17 @@
       display: none;
     }
 
-    .needs1,
-    .needs2,
-    .needs3,
-    .needs4,
-    .needs5,
-    .needs6,
-    .needs7,
-    .needs8,
-    .needs9,
-    .needs10,
-    .needs11,
-    .needs12 {
+    .listcards {
       width: 100%;
       height: 100%;
-      overflow-x: auto;
-      padding-right: 4px;
+      padding-right: 2px;
+      overflow-y: auto;
+      .cards_contr {
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        padding-right: 4px;
+      }
     }
-  }
-}
-
-.pnl_btm1,
-.pnl_btm2,
-.pnl_btm3,
-.pnl_btm4,
-.pnl_btm5,
-.pnl_btm6,
-.pnl_btm7,
-.pnl_btm8,
-.pnl_btm9,
-.pnl_btm10,
-.pnl_btm11,
-.pnl_btm12 {
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: max-content;
-  grid-auto-rows: 1fr;
-  grid-template-columns: 1fr;
-  grid-template-rows: 19px auto;
-  gap: 0px 0px;
-  grid-template-areas:
-    "line"
-    "impacts";
-
-  .impacts {
-    grid-area: impacts;
-    border: 1px solid $clr1;
-    border-radius: 10px;
-    padding: 8px 4px 8px 8px;
-    max-height: 35vh;
-    background: rgba(119, 113, 106, 0.04);
-
-    /* total width */
-    ::-webkit-scrollbar {
-      background-color: $clr2;
-      width: 4px;
-      border-radius: 2px;
-    }
-
-    /* background of the scrollbar except button or resizer */
-    ::-webkit-scrollbar-track {
-      background-color: $clr2;
-      border-radius: 4px;
-    }
-
-    /* scrollbar itself */
-    ::-webkit-scrollbar-thumb {
-      background-color: $clr1;
-      border-radius: 4px;
-    }
-
-    /* set button(top and bottom of the scrollbar) */
-    ::-webkit-scrollbar-button {
-      display: none;
-    }
-
-    .cards1,
-    .cards2,
-    .cards3,
-    .cards4,
-    .cards5,
-    .cards6,
-    .cards7,
-    .cards8,
-    .cards9,
-    .cards10,
-    .cards11,
-    .cards12 {
-      width: 100%;
-      height: 100%;
-      overflow-x: auto;
-      padding-right: 4px;
-    }
-  }
-
-  .line {
-    grid-area: line;
-    background: linear-gradient($clr1, $clr1) no-repeat center/1px 100%;
   }
 }
