--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -102,7 +102,7 @@
   }
 }
 
-.card_lgnd2 {
+.card_lgn2 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -160,7 +160,7 @@
   }
 }
 
-.card_lgnd3 {
+.card_lgn3 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -218,7 +218,7 @@
   }
 }
 
-.card_lgnd4 {
+.card_lgn4 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -276,7 +276,7 @@
   }
 }
 
-.card_lgnd5 {
+.card_lgn5 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -334,7 +334,7 @@
   }
 }
 
-.card_lgnd6 {
+.card_lgn6 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
@@ -392,7 +392,7 @@
   }
 }
 
-.card_lgnd7 {
+.card_lgn7 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto 1fr;
