--- a/src/assets/scss/components/_timeline.scss
+++ b/src/assets/scss/components/_timeline.scss
@@ -187,7 +187,8 @@
               .dot#{$i} {
                 width: min-content;
                 float: right;
-                width: 12px;
+                width: auto;
+                padding: 0 4px;
                 height: 12px;
                 border-radius: 6px;
                 background-color: $clr2;
@@ -249,10 +250,10 @@
               .dot#{$i} {
                 width: min-content;
                 float: right;
-                width: 12px;
+                width: auto;
+                padding: 0 4px;
                 height: 12px;
                 border-radius: 6px;
-                background-color: $clr2;
                 font-size: 10px;
                 font-weight: 400;
                 line-height: 12px;
