--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4124,7 +4124,8 @@ label.checkbox.lgnd7 span {
 .scrim .dlg_new .dlg_cnt .cnt_sections .sections {
   width: 100%;
   height: 100%;
-  overflow-y: hidden;
+  max-height: 480px;
+  overflow-y: auto;
   overflow-x: hidden;
   padding: 0 8px 16px;
 }
