--- a/src/assets/scss/components/_dialogs.scss
+++ b/src/assets/scss/components/_dialogs.scss
@@ -654,7 +654,8 @@
         .sections {
           width: 100%;
           height: 100%;
-          overflow-y: hidden;
+          max-height: 480px;
+          overflow-y: auto;
           overflow-x: hidden;
           padding: 0 8px 16px;
 
