--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -376,7 +376,7 @@ body .wrapper .content ::-webkit-scrollbar-button {
   height: 100%;
   display: flex;
   flex-direction: row;
-  padding-bottom: 20px;
+  padding-bottom: 8px;
   overflow-y: auto;
   overflow-y: hidden;
 }
@@ -384,11 +384,9 @@ body .wrapper .content ::-webkit-scrollbar-button {
   height: 100%;
   display: grid;
   grid-template-columns: 60px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px 220px;
-  grid-template-rows: 36px 1fr 44px 1fr;
+  grid-template-rows: 36px calc(50% - 58px) 44px calc(50% - 22px);
   gap: 0px 0px;
   grid-auto-flow: row;
-  padding-bottom: 20px;
-  border-bottom: 1px solid rgba(119, 113, 106, 0.5);
   grid-template-areas: "tp_yr ce_top ce_top ce_top ce_top ce_top ce_top ce_top ce_top ce_top ce_top ce_top ce_top" "tp_yr tp1 tp2 tp3 tp4 tp5 tp6 tp7 tp8 tp9 tp10 tp11 tp12" "line line line line line line line line line line line line line" "btm_yr bt1 bt2 bt3 bt4 bt5 bt6 bt7 bt8 bt9 bt10 bt11 bt12";
 }
 .timeline .year .ce_top {
@@ -2702,7 +2700,6 @@ body .wrapper .content ::-webkit-scrollbar-button {
   border: 1px solid #77716A;
   border-radius: 10px;
   padding: 8px 2px 4px 8px;
-  max-height: 35vh;
   background: rgba(119, 113, 106, 0.04);
   /* total width */
   /* background of the scrollbar except button or resizer */
@@ -2762,7 +2759,6 @@ body .wrapper .content ::-webkit-scrollbar-button {
   border: 1px solid #77716A;
   border-radius: 10px;
   padding: 8px 2px 4px 8px;
-  max-height: 35vh;
   background: rgba(119, 113, 106, 0.04);
   /* total width */
   /* background of the scrollbar except button or resizer */
