update contributions scss

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2701,6 +2701,8 @@ body .wrapper .content ::-webkit-scrollbar-button {
   border-radius: 10px;
   padding: 8px 2px 4px 8px;
   background: rgba(119, 113, 106, 0.04);
+  height: calc(100% - 36px);
+  align-self: end;
   /* total width */
   /* background of the scrollbar except button or resizer */
   /* scrollbar itself */
