--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2691,7 +2691,7 @@ body .wrapper .content ::-webkit-scrollbar-button {
   grid-auto-columns: max-content;
   grid-auto-rows: 1fr;
   grid-template-columns: 1fr;
-  grid-template-rows: auto 19px;
+  grid-template-rows: minmax(164px, auto) 19px;
   gap: 0px 0px;
   grid-template-areas: "contributions" "line";
 }
