--- a/src/assets/scss/components/_contributions.scss
+++ b/src/assets/scss/components/_contributions.scss
@@ -1,10 +1,11 @@
 .pnl_top {
   display: grid;
+  height: max-content;
   grid-auto-flow: column;
   grid-auto-columns: max-content;
   grid-auto-rows: 1fr;
   grid-template-columns: 1fr;
-  grid-template-rows: minmax(164px, auto) 19px;
+  grid-template-rows: 1fr 19px;
   gap: 0px 0px;
   grid-template-areas:
     "contributions"
@@ -16,7 +17,7 @@
     border-radius: 10px;
     padding: 8px 2px 4px 8px;
     background: rgba(119, 113, 106, 0.04);
-    height: calc(100% - 36px);
+    height: 100%;
     align-self: end;
 
     /* total width */
