--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2749,7 +2749,7 @@ body .wrapper .content ::-webkit-scrollbar-button {
   grid-auto-columns: max-content;
   grid-auto-rows: 1fr;
   grid-template-columns: 1fr;
-  grid-template-rows: 19px auto;
+  grid-template-rows: 19px 1fr;
   gap: 0px 0px;
   grid-template-areas: "line" "needs";
 }
@@ -2762,6 +2762,7 @@ body .wrapper .content ::-webkit-scrollbar-button {
   border: 1px solid #77716A;
   border-radius: 10px;
   padding: 8px 2px 4px 8px;
+  height: calc(100% - 16px);
   background: rgba(119, 113, 106, 0.04);
   /* total width */
   /* background of the scrollbar except button or resizer */
@@ -4274,11 +4275,10 @@ label.checkbox.lgnd7 span {
   width: max-content;
   height: 24px;
   border-radius: 6px;
-  padding: 8px 8px;
   background-color: #444F5B;
   cursor: pointer;
   font-size: 12px;
-  padding: 5px 8px;
+  padding: 3px 8px;
   color: #FDF4E7;
 }
 .btn_hs:hover {
@@ -4289,11 +4289,10 @@ label.checkbox.lgnd7 span {
   width: max-content;
   height: 24px;
   border-radius: 6px;
-  padding: 8px 8px;
   background-color: #4073FF;
   cursor: pointer;
   font-size: 12px;
-  padding: 5px 8px;
+  padding: 3px 8px;
   color: #FDF4E7;
 }
 .btn_addnew:hover {
