--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4010,7 +4010,7 @@ label.checkbox.lgnd7 span {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 48px auto;
+  grid-template-rows: 48px auto auto;
   gap: 0px 0px;
   grid-auto-flow: row;
   background-color: #fff;
@@ -4018,7 +4018,7 @@ label.checkbox.lgnd7 span {
   border-radius: 6px;
   box-sizing: border-box;
   overflow: hidden;
-  grid-template-areas: "dlg_bar" "dlg_cnt";
+  grid-template-areas: "dlg_bar" "dlg_cnt" "dlg_cta_bttm";
 }
 .scrim .dlg_new .dlg_bar {
   display: grid;
@@ -4210,6 +4210,15 @@ label.checkbox.lgnd7 span {
 .scrim .dlg_new .dlg_cnt .cnt_sections .sections .sec3 .dl4 .dl4cont .i1,
 .scrim .dlg_new .dlg_cnt .cnt_sections .sections .sec3 .dl4 .dl4cont .i2 {
   margin-bottom: 20px;
+}
+.scrim .dlg_new .dlg_cta_bttm {
+  grid-area: dlg_cta_bttm;
+  padding: 8px 16px 8px 8px;
+}
+.scrim .dlg_new .dlg_cta_bttm .bttm-btns {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0 8px;
 }
 
 .btn-lgnd-inf {
@@ -5134,11 +5143,6 @@ input:checked + .slider:before {
 .newAttContent {
   width: 100%;
   height: 100%;
-}
-.newAttContent .bttm-btns {
-  display: flex;
-  justify-content: flex-end;
-  gap: 0 8px;
 }
 .newAttContent .lineTwoFields {
   display: grid;
