--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -41,10 +41,21 @@
     font-style: normal;
     font-weight: 500;
     color: #111b2b;
+    max-width: 95%;
   }
   margin-bottom: 8px;
 }
 
 .input-group-append {
   cursor: pointer;
+}
+
+.helper_text {
+  //visibility: hidden;
+  width: 100%;
+  height: auto;
+  padding: 0 0 0 16px;
+  font-size: 12px;
+  line-height: 16px;
+  color: red;
 }
