--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -41,7 +41,7 @@
     font-style: normal;
     font-weight: 500;
     color: #111b2b;
-    max-width: 95%;
+    max-width: 98%;
   }
   margin-bottom: 8px;
 }
@@ -51,7 +51,7 @@
 }
 
 .helper_text {
-  //visibility: hidden;
+  visibility: hidden;
   width: 100%;
   height: auto;
   padding: 0 0 0 16px;
